correcion de la conexion a  la api

--- a/www/index.html
+++ b/www/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
     <meta http-equiv="Content-Security-Policy" content="
-      default-src 'self' data: gap: https://ssl.gstatic.com https://cdnjs.cloudflare.com;
-      style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com;
-      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://cdnjs.cloudflare.com;
-      connect-src 'self' http://localhost:3000 http://10.0.2.2:3000;
-      font-src 'self' https://cdnjs.cloudflare.com;
+      default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval' 'unsafe-inline';
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://kit.fontawesome.com;
+      font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com https://kit.fontawesome.com;
+      img-src 'self' data: https:;
+      connect-src 'self' http://127.0.0.1:3000 http://localhost:3000 http://192.168.1.100:3000 https://tu-servidor.com https://api.patitasfelices.com;
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://kit.fontawesome.com;
+      object-src 'none';
+      media-src 'self';
+      frame-src 'self';
     ">
     <title>Clínica Veterinaria Patitas Felices</title>
     <link rel="stylesheet" href="css/index.css">
@@ -415,6 +419,8 @@
 
     <!-- Scripts -->
     <script src="js/config.js"></script>
+    <script src="js/dev-config.js"></script>
+    <script src="js/api-error-handler.js"></script>
     <script src="js/api.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/auth.js"></script>
@@ -422,6 +428,7 @@
     <script src="js/citas.js"></script>
     <script src="js/historiales.js"></script>
     <script src="js/usuarios.js"></script>
+    <script src="js/navigation.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
